--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ maintainers = [
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">3.9.1,<4"
+python = ">=3.10,<4"
 fastapi = "^0.115.6"
 uvicorn = { version = "^0.34.0", extras = ["standard"] }
 gunicorn = "^23.0.0"
@@ -31,6 +31,7 @@ pymongo = "^4.10.1"
 prometheus-client = "^0.21.1"
 prometheus-fastapi-instrumentator = "7.0.0"
 loguru = "^0.7.3"
+aiosmtplib = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
